--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14845" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="YTS-cD-PDT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14845" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cXS-uy-K0n">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14799.2"/>
@@ -72,9 +72,9 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="fhU-qn-D6z">
-                        <barButtonItem key="leftBarButtonItem" title="New Show" id="ukz-9p-DRM">
+                        <barButtonItem key="leftBarButtonItem" title="Shows" id="ukz-9p-DRM">
                             <connections>
-                                <action selector="newShow" destination="yak-cE-mUi" id="VCR-o0-Q9b"/>
+                                <action selector="closeShow" destination="yak-cE-mUi" id="VCR-o0-Q9b"/>
                             </connections>
                         </barButtonItem>
                         <rightBarButtonItems>
@@ -313,10 +313,28 @@
             </objects>
             <point key="canvasLocation" x="2145" y="78.16901408450704"/>
         </scene>
+        <!--Show Browser View Controller-->
+        <scene sceneID="49a-1F-SrI">
+            <objects>
+                <viewController id="cXS-uy-K0n" customClass="ShowBrowserViewController" customModule="Stingtk" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1rn-W0-3xH"/>
+                        <viewControllerLayoutGuide type="bottom" id="heL-90-VhG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="i0c-bv-lB3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DpZ-w0-peU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-786" y="-732"/>
+        </scene>
         <!--Playback-->
         <scene sceneID="kDB-4j-sjU">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YTS-cD-PDT" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="Root View Controller" automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="YTS-cD-PDT" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Playback" image="music.note.list" catalog="system" id="8eI-x5-krT"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EvB-0l-pZT">
