--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -31,64 +31,75 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="103"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cYY-yH-5Lf">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="103"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="repeat" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Idd-io-e6G">
+                                            <rect key="frame" x="292" y="76" width="20" height="18"/>
+                                            <color key="tintColor" cocoaTouchSystemColor="tertiaryLabelColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="20" id="crk-En-N2K"/>
+                                                <constraint firstAttribute="width" constant="20" id="wAt-6Q-apf"/>
+                                            </constraints>
+                                        </imageView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gjq-kL-8Xf" userLabel="Left View">
+                                            <rect key="frame" x="0.0" y="0.0" width="103" height="103"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bv4-uN-qad">
+                                                    <rect key="frame" x="15.5" y="10.833333333333329" width="72" height="82.000000000000014"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="bv4-uN-qad" secondAttribute="height" multiplier="1:1" id="1Ld-mk-AZl"/>
+                                                    </constraints>
+                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="50" scale="large" weight="light"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" cocoaTouchSystemColor="secondarySystemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstItem="bv4-uN-qad" firstAttribute="centerY" secondItem="Gjq-kL-8Xf" secondAttribute="centerY" id="D5W-of-7JA"/>
+                                                <constraint firstItem="bv4-uN-qad" firstAttribute="centerX" secondItem="Gjq-kL-8Xf" secondAttribute="centerX" id="OLl-px-6Ow"/>
+                                                <constraint firstAttribute="width" secondItem="Gjq-kL-8Xf" secondAttribute="height" multiplier="1:1" id="jEV-vy-zn1"/>
+                                            </constraints>
                                         </view>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iEI-ar-xc8">
-                                            <rect key="frame" x="15" y="15" width="290" height="73"/>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UNM-N1-Mza" userLabel="Right View">
+                                            <rect key="frame" x="103" y="0.0" width="217" height="103"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track Name" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cMJ-uU-fhi">
-                                                    <rect key="frame" x="15" y="8" width="260" height="57"/>
+                                                    <rect key="frame" x="8" y="8" width="201" height="87"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="repeat" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Idd-io-e6G">
-                                                    <rect key="frame" x="270" y="54" width="20" height="18"/>
-                                                    <color key="tintColor" cocoaTouchSystemColor="tertiaryLabelColor"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="crk-En-N2K"/>
-                                                        <constraint firstAttribute="width" constant="20" id="wAt-6Q-apf"/>
-                                                    </constraints>
-                                                </imageView>
                                             </subviews>
-                                            <color key="backgroundColor" white="1" alpha="0.67329068791946312" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" name="Background Color"/>
                                             <constraints>
-                                                <constraint firstItem="cMJ-uU-fhi" firstAttribute="leading" secondItem="iEI-ar-xc8" secondAttribute="leading" constant="15" id="Oiz-IG-ccm"/>
-                                                <constraint firstAttribute="trailing" secondItem="Idd-io-e6G" secondAttribute="trailing" id="Wby-pY-DKO"/>
-                                                <constraint firstAttribute="trailing" secondItem="cMJ-uU-fhi" secondAttribute="trailing" constant="15" id="iTa-iE-PMg"/>
-                                                <constraint firstItem="cMJ-uU-fhi" firstAttribute="top" secondItem="iEI-ar-xc8" secondAttribute="top" constant="8" id="iUW-GT-lK2"/>
-                                                <constraint firstAttribute="bottom" secondItem="cMJ-uU-fhi" secondAttribute="bottom" constant="8" id="n78-ju-h62"/>
-                                                <constraint firstAttribute="bottom" secondItem="Idd-io-e6G" secondAttribute="bottom" id="wYy-5w-qOt"/>
+                                                <constraint firstItem="cMJ-uU-fhi" firstAttribute="top" secondItem="UNM-N1-Mza" secondAttribute="top" constant="8" id="2PQ-Ba-bfn"/>
+                                                <constraint firstAttribute="trailing" secondItem="cMJ-uU-fhi" secondAttribute="trailing" constant="8" id="KFk-l8-3wG"/>
+                                                <constraint firstAttribute="bottom" secondItem="cMJ-uU-fhi" secondAttribute="bottom" constant="8" id="Vnh-nd-FAO"/>
+                                                <constraint firstItem="cMJ-uU-fhi" firstAttribute="leading" secondItem="UNM-N1-Mza" secondAttribute="leading" constant="8" id="etm-lZ-djE"/>
                                             </constraints>
-                                            <userDefinedRuntimeAttributes>
-                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                    <integer key="value" value="7"/>
-                                                </userDefinedRuntimeAttribute>
-                                            </userDefinedRuntimeAttributes>
                                         </view>
                                     </subviews>
                                 </view>
-                                <color key="backgroundColor" cocoaTouchSystemColor="systemYellowColor"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="systemIndigoColor"/>
                                 <constraints>
-                                    <constraint firstItem="cYY-yH-5Lf" firstAttribute="top" secondItem="wn0-gC-jEl" secondAttribute="top" id="F5Q-sl-RtW"/>
-                                    <constraint firstItem="iEI-ar-xc8" firstAttribute="top" secondItem="wn0-gC-jEl" secondAttribute="top" constant="15" id="Hch-Zx-bMn"/>
-                                    <constraint firstAttribute="bottom" secondItem="iEI-ar-xc8" secondAttribute="bottom" constant="15" id="eFT-mC-2sB"/>
-                                    <constraint firstItem="cYY-yH-5Lf" firstAttribute="leading" secondItem="wn0-gC-jEl" secondAttribute="leading" id="eWj-NS-UCG"/>
-                                    <constraint firstItem="iEI-ar-xc8" firstAttribute="leading" secondItem="wn0-gC-jEl" secondAttribute="leading" constant="15" id="fEQ-pM-bGM"/>
-                                    <constraint firstAttribute="bottom" secondItem="cYY-yH-5Lf" secondAttribute="bottom" id="i9S-ZH-LR6"/>
-                                    <constraint firstAttribute="trailing" secondItem="iEI-ar-xc8" secondAttribute="trailing" constant="15" id="isQ-Us-FO8"/>
-                                    <constraint firstAttribute="trailing" secondItem="cYY-yH-5Lf" secondAttribute="trailing" id="pyu-8B-xmd"/>
+                                    <constraint firstAttribute="trailing" secondItem="UNM-N1-Mza" secondAttribute="trailing" id="6df-kt-7dy"/>
+                                    <constraint firstItem="Gjq-kL-8Xf" firstAttribute="top" secondItem="wn0-gC-jEl" secondAttribute="top" id="B37-KJ-6c4"/>
+                                    <constraint firstAttribute="bottom" secondItem="Idd-io-e6G" secondAttribute="bottom" constant="8" id="JJL-x5-Teg"/>
+                                    <constraint firstAttribute="bottom" secondItem="Gjq-kL-8Xf" secondAttribute="bottom" id="V2h-iB-RNo"/>
+                                    <constraint firstAttribute="bottom" secondItem="UNM-N1-Mza" secondAttribute="bottom" id="Yyf-Ro-wyL"/>
+                                    <constraint firstAttribute="trailing" secondItem="Idd-io-e6G" secondAttribute="trailing" constant="8" id="b2Z-zq-OVS"/>
+                                    <constraint firstItem="UNM-N1-Mza" firstAttribute="top" secondItem="wn0-gC-jEl" secondAttribute="top" id="dWp-0U-TQd"/>
+                                    <constraint firstItem="Gjq-kL-8Xf" firstAttribute="leading" secondItem="wn0-gC-jEl" secondAttribute="leading" id="iTs-d1-Xce"/>
+                                    <constraint firstItem="UNM-N1-Mza" firstAttribute="leading" secondItem="Gjq-kL-8Xf" secondAttribute="trailing" id="ncY-jo-bhA"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                         <integer key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <outlet property="loopIndicator" destination="Idd-io-e6G" id="pVC-JF-M9b"/>
-                                    <outlet property="progressView" destination="cYY-yH-5Lf" id="ICP-wG-uS9"/>
+                                    <outlet property="playbackIndicator" destination="bv4-uN-qad" id="Ww6-em-erI"/>
                                     <outlet property="titleLabel" destination="cMJ-uU-fhi" id="PU5-68-PKs"/>
                                 </connections>
                             </collectionViewCell>
@@ -505,9 +516,13 @@
         </scene>
     </scenes>
     <resources>
+        <image name="circle" catalog="system" width="64" height="62"/>
         <image name="repeat" catalog="system" width="64" height="50"/>
         <image name="slider.horizontal.3" catalog="system" width="64" height="50"/>
         <image name="waveload" width="280" height="75"/>
+        <namedColor name="Background Color">
+            <color red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Tint Color">
             <color red="1" green="0.50196078431372548" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
